Fixed alignment issues in about

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -4,10 +4,23 @@
     mask-image: linear-gradient(to bottom, rgba(0,0,0,.40) 0%, rgba(0,0,0,.40) 50%, rgba(0,0,0,0) 100%);
     object-fit: cover;
 }
-.box {
+.about {
+    position: relative;
+}
+.sidebyside {
     position: absolute;
-    width: 70%;
-    left: 30%;
-    top: 200px;
+    top: 30%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+}
+.box {
+    width: 500px;
     margin-left: 40px;
+    min-width: 400px;
+}
+@media only screen and (max-width: 1300px) {
+    .sidebyside {
+        top: 40%;
+        left: 40%;
+    }
 }
